# django-project-example

./: LICENSE  README.md  example.sh  startproject.sh
example/: pyproject.toml
example/src/: manage.py
example/src/project/settings/: base.py  development.py  production.py
