[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bbb", email = "benjamin@overtag.dk" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
]

[project.scripts]
example = "example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
